--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<p>Hello 大家好</p>
+<html>
+    <head>
+        <title>五一周边游好去处</title>
+        <link rel="stylesheet" href="body.css">
+    </head>
+    <body>
+        <div class="navbar">
+            <a href="#1st">网页内容仅用于课程作业，图片均来源于网络，如有侵权请发邮箱1119787502@qq.com</a>
+        </div>
+        <h1>五一假期去哪玩，谁还没定下来？</h1>
+        <img src="images/五一去哪.webp.jpg" width="778" height="439"/>
+        <h2>在这里为大家整理了三个旅游目的地：</h2>
+        <h2>如果想要游山玩水，可以考虑<a href="云台山.html"target="_blank">河南云台山风景区</a>；</h2>
+        <img src="images/云台山全景.jpeg" width="778" height="439"/>
+        <h2>如果想感受历史文化，<a href="山西景点.html"target="_blank">山西省各景点</a>也是不错的选择；</h2>
+        <img src="images/山西.jpg" width="778" height="439"/>
+        <h2>如果追求全身心放松，到<a href="沈阳出游.html"target="_blank">沈阳</a>洗个澡也舒坦得很。</h2>
+        <img src="images/沈阳.webp.jpg" width="778" height="439"/>
+    </body>
+</html>
